// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders builder goals 1`] = `
<div
  className="container"
>
  <div
    className="sortSearchBar"
  >
    <div
      className="createContainer"
    >
      <button
        className="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="flex"
        >
          <span>
            Create Goal
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="bottomContainer"
  >
    <div
      className="itemsList"
    >
      <div
        className="emptyMessage"
      >
        <div
          className="emptyLogo"
        />
        <div
          className="emptyLabel"
        >
          No Goals
        </div>
      </div>
    </div>
    <div
      className="itemContainer"
    />
  </div>
</div>
`;

exports[`renders goal create 1`] = `
<div
  className="container"
>
  <div
    className="sortSearchBar"
  >
    <div
      className="createContainer"
    >
      <Button
        messageId="builder.createGoal"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="bottomContainer"
  >
    <div
      className="itemsList compressed"
    >
      <div
        className="emptyMessage"
      >
        <div
          className="emptyLogo"
        />
        <div
          className="emptyLabel"
        >
          No Goals
        </div>
      </div>
    </div>
    <div
      className="itemContainer visible"
    >
      <withRouter(Connect(WithErrorHandler))
        onClose={[Function]}
        routeBase="/builder/goals"
      />
    </div>
  </div>
</div>
`;
